--- a/login.html
+++ b/login.html
@@ -5,11 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件-登录/注册</title>
+    <!-- 导入 LayUI 的样式 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <!-- 导入自己的样式表 -->
+    <link rel="stylesheet" href="/assets/css/login.css">
+
 </head>
 
 <body>
+    <!-- 头部的 logo 区域 -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="">
+    </div>
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegBox">
+        <!-- 头部标题 -->
+        <div class="title-box"></div>
+        <!-- 登录的div -->
+        <div class="login-box">
+            <!-- 登录的表单 -->
+            <form class="layui-form" action="">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 按钮 -->
+                <div class="layui-form-item">
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
+                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">登录</button>
+                </div>
 
+                <div class="layui-form-item">
+                    <a href="javascript:;" id="link_reg">去注册</a>
+                </div>
+            </form>
+
+
+        </div>
+        <!-- 注册的div -->
+        <div class="reg-box"><a href="javascript:;" id="link_login">去登录</a>
+        </div>
+    </div>
+
+    <!-- 导入jqury -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己的js脚本 -->
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
