--- a/login.html
+++ b/login.html
@@ -58,6 +58,7 @@
     <script src="/assets/lib/jquery.js"></script>
     <!-- 导入自己的js脚本 -->
     <script src="/assets/js/login.js"></script>
+    <div>123</div>
 </body>
 
 </html>
