--- a/login.html
+++ b/login.html
@@ -25,24 +25,32 @@
         <!-- 登录的div -->
         <div class="login-box">
             <!-- 登录的表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form_login">
                 <!-- 用户名 -->
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+                    <!-- 小图标 -->
+                    <i class="layui-icon layui-icon-username"></i>
+
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
                         autocomplete="off" class="layui-input">
+
                 </div>
                 <!-- 密码 -->
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入标题"
+
+                    <i class="layui-icon layui-icon-password"></i>
+
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
-                <!-- 按钮 -->
+                <!-- 登录按钮 -->
                 <div class="layui-form-item">
                     <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
-                    <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="formDemo">登录</button>
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit
+                        lay-filter="formDemo">登录</button>
                 </div>
 
-                <div class="layui-form-item">
+                <div class="layui-form-item links">
                     <a href="javascript:;" id="link_reg">去注册</a>
                 </div>
             </form>
@@ -50,12 +58,58 @@
 
         </div>
         <!-- 注册的div -->
-        <div class="reg-box"><a href="javascript:;" id="link_login">去登录</a>
+        <div class="reg-box">
+
+            <!-- 注册的表单 -->
+            <form class="layui-form" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <!-- 小图标 -->
+                    <i class="layui-icon layui-icon-username"></i>
+
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+
+                    <i class="layui-icon layui-icon-password"></i>
+
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 再次确认密码 -->
+                <div class="layui-form-item">
+
+                    <i class="layui-icon layui-icon-password"></i>
+
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
+                        placeholder="再次入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item">
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit
+                        lay-filter="formDemo">立即注册</button>
+                </div>
+
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id="link_login">去登录</a>
+                </div>
+            </form>
+
         </div>
     </div>
-
+    <!-- 导入layui 的js -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jqury -->
     <script src="/assets/lib/jquery.js"></script>
+
+    <!-- 导入 自己封装的 baseAPI.js -->
+    <!-- 这个baseAPI.js文件 要依赖jquery，且要在自己js文件之前生效。 所以要放在jquery之后，自己js之前 -->
+    <script src="/assets/js/baseAPI.js"></script>
+
     <!-- 导入自己的js脚本 -->
     <script src="/assets/js/login.js"></script>
 
