完成了主页功能开发

--- a/login.html
+++ b/login.html
@@ -100,6 +100,7 @@
             </form>
 
         </div>
+        测试账号和密码 &nbsp;&nbsp;&nbsp;118261
     </div>
     <!-- 导入layui 的js -->
     <script src="/assets/lib/layui/layui.all.js"></script>
