--- a/index.html
+++ b/index.html
@@ -5,10 +5,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>后台主页</title>
+
+    <!-- 导入 layui 的样式表 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+
+    <!-- 导入第三方图标库 -->
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css">
+
+    <!-- 导入  自己的样式表 -->
+    <link rel="stylesheet" href="/assets/css/index.css">
+
 </head>
 
 <body>
+    <div class="layui-layout layui-layout-admin">
+
+        <!-- 头部区域 -->
+        <div class="layui-header">
+            <!-- logo 部分 -->
+            <div class="layui-logo layui-hide-xs layui-bg-black">
+                <img src="/assets/images/logo.png" alt="">
+            </div>
+
+            <!-- 头部区域（可配合layui 已有的水平导航） -->
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item layui-hide layui-show-md-inline-block">
+
+                    <!-- 用户头像 右边 -->
+                    <a href="javascript:;" class="userinfo">
+                        <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                            class="layui-nav-img">
+                        <span class="text-avatar">A</span>
+                        个人中心
+                    </a>
+
+                    <dl class="layui-nav-child">
+                        <dd><a href="">基本信息</a></dd>
+                        <dd><a href="">跟换头像</a></dd>
+                        <dd><a href="">重置密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
+                    <a href="javascript:;" id="btnLogout">
+                        <span class="iconfont icon-tuichu"></span> 退出
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- 左  侧边栏 -->
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+
+                <!-- 用户头像 左边-->
+                <div class="userinfo">
+                    <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                        class="layui-nav-img">
+                    <span class="text-avatar">a</span>
+                    <span id="welcome">欢迎 ***</span>
+                </div>
+
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
+
+                    <!-- 下面2个类名效果是：打开页面默认选中状态。 -->
+                    <!-- layui-this 效果明显-->
+                    <!-- layui-nav-itemed  效果不明显-->
+                    <li class="layui-nav-item layui-this   ">
+                        <a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home"></span>首页</a>
+                    </li>
+
+                    <li class="layui-nav-item ">
+                        <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>跟换头像</a></dd>
+                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                        </dl>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
+        <!-- 内容主体区域 -->
+        <div class="layui-body">
+
+            <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
+        </div>
+
+        <div class="layui-footer">
+            <!-- 底部固定区域 -->
+            @ www.ithema.com - 黑马程序员
+        </div>
+    </div>
+
+    <!-- 导入 layui 的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+
+    <!-- 导入 jquery 的js文件  -->
+    <script src="/assets/lib/jquery.js"></script>
+
+    <!-- 导入 自己封装的 baseAPI.js ajaxPrefilter函数-->
+    <script src="/assets/js/baseAPI.js"></script>
+
+    <!-- 导入自己的js -->
+    <script src="/assets/js/index.js"></script>
+
 </body>
 
 </html>
