完成个人中心功能的开发

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     </a>
 
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本信息</a></dd>
-                        <dd><a href="">跟换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本信息</a></dd>
+                        <dd><a href="/user/user_avater.html" target="fm">跟换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -87,9 +87,17 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>跟换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>基本资料</a>
+                            </dd>
+
+                            <dd><a href="/user/user_avater.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>跟换头像</a>
+                            </dd>
+
+                            <dd><a href="/user/user_pwd.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>重置密码</a>
+                            </dd>
                         </dl>
                     </li>
 
